Fixed an image overflow bug

--- a/ecommerce/client/src/app/App.scss
+++ b/ecommerce/client/src/app/App.scss
@@ -1,23 +1,24 @@
 .image-selector {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: left;
 	align-items: left;
 	margin: 20px 0px 20px 0px;
+	overflow: auto;
 	// border: 1px solid red;
-	
-	// For the selected image of the tiny images
-	.selected-image {
-		outline-style: solid;
-		outline-color: cornflowerblue;
-	}
 
 	.image-element {
-		margin-right: 10px;
-		
+		margin: 5px;
+
 		.tiny-image {
 			width: 64px;
 			height: 64px;
+		}
+		
+		// For the selected image of the tiny images
+		.selected-image {
+			outline-style: solid;
+			outline-color: cornflowerblue;
 		}
 
 		&:hover {
