--- a/ecommerce/client/src/app/pages/product_view/ProductView.css
+++ b/ecommerce/client/src/app/pages/product_view/ProductView.css
@@ -1,6 +1,6 @@
 .product-image {
-  width: 60vw;
-  height: 40vw;
+  outline-color: blueviolet;
+  outline-style: solid;
 }
 
 /*# sourceMappingURL=ProductView.css.map */
